--- a/invite.html
+++ b/invite.html
@@ -459,7 +459,7 @@
 <section class="cta-section">
   <div class="container">
     <div class="name-cta-group">
-      <label for="visitor-name" class="name-label">Sign Up for Tax Services</label>
+      <label for="visitor-name" class="name-label"><h2>Sign Up for Tax Services</h2></label>
       <input 
         type="text" 
         id="visitor-name" 
