--- a/invite.html
+++ b/invite.html
@@ -494,50 +494,58 @@
     </div>
   </footer>
 
-  <script>
-    // ────────────────────────────────────────────────
-    // URL params + logging
-    // ────────────────────────────────────────────────
-    const urlParams = new URLSearchParams(window.location.search);
-    const ref = urlParams.get('ref') || urlParams.get('code') || '';
+<script>
+  // ────────────────────────────────────────────────
+  // URL params + logging
+  // ────────────────────────────────────────────────
+  const urlParams = new URLSearchParams(window.location.search);
+  const ref = urlParams.get('ref') || urlParams.get('code') || '';
 
-    // Your logging endpoint – replace with your actual URL
-    const LOG_URL = "https://script.google.com/macros/s/AKfycbzsLDNNDGpeSbEDm91Z__XuAviXIlMTNYEXg6b8AcK3scmFba9QxP2kPFJLrz5ChOm8/exec";
+  // Your actual logging endpoint
+  const LOG_URL = "https://script.google.com/macros/s/AKfycbzsLDNNDGpeSbEDm91Z__XuAviXIlMTNYEXg6b8AcK3scmFba9QxP2kPFJLrz5ChOm8/exec";
 
-    const signupBtn = document.getElementById('signup-btn');
+  const signupBtn = document.getElementById('signup-btn');
 
-    if (signupBtn && ref) {
-  // Pass ref to TaxDome URL
-  signupBtn.href = `https://portal.taxentric.com/en-us/signup/?ref=${encodeURIComponent(ref)}`;
+  if (signupBtn && ref) {
+    // Pass ref to TaxDome
+    signupBtn.href = `https://portal.taxentric.com/en-us/signup/?ref=${encodeURIComponent(ref)}`;
 
-  signupBtn.addEventListener('click', function() {
-    const fullName = document.getElementById('visitor-name').value.trim() || '(not provided)';
+    signupBtn.addEventListener('click', function(e) {
+      // Do NOT preventDefault() — let the <a> href navigate normally
 
-    console.log("Attempting to log:", {
-      referralCode: ref,
-      visitorName: fullName,
-      timestamp: new Date().toISOString()
-    });
+      const fullNameInput = document.getElementById('visitor-name');
+      const fullName = fullNameInput ? fullNameInput.value.trim() : '(not provided)';
 
-    // Fire fetch without waiting or blocking navigation
-    fetch(LOG_URL, {
-      method: 'POST',
-      mode: 'no-cors',
-      headers: { 'Content-Type': 'text/plain;charset=utf-8' },
-      body: JSON.stringify({
+      console.log("Button clicked");
+      console.log("Full name from input:", fullName);
+      console.log("Referral code:", ref);
+
+      // Prepare payload
+      const payload = {
         referralCode: ref,
         visitorName: fullName,
         source: 'invite_page_signup_click',
-        notes: 'Clicked signup',
+        notes: 'Clicked signup button',
         timestamp: new Date().toISOString()
-      })
-    }).catch(err => {
-      console.log('Background log attempt failed (normal if page unloads fast):', err);
-    });
+      };
 
-    // Do NOT preventDefault or manually redirect — let the <a> tag do its job
-  });
-}
-  </script>
+      console.log("Sending payload:", payload);
+
+      // Fire fetch (fire-and-forget)
+      fetch(LOG_URL, {
+        method: 'POST',
+        mode: 'no-cors',
+        headers: { 'Content-Type': 'text/plain;charset=utf-8' },
+        body: JSON.stringify(payload)
+      }).catch(err => {
+        console.log('Background fetch failed (normal during navigation):', err);
+      });
+
+      // Navigation happens automatically via <a> href
+    });
+  } else {
+    console.log("Signup button or ref not found — no handler attached");
+  }
+</script>
 </body>
 </html>
