--- a/invite.html
+++ b/invite.html
@@ -512,7 +512,8 @@
   referralCode: ref,
   visitorName: fullName,
   source: 'invite_page_signup_click',
-  timestamp: new Date().toISOString()
+  status: 'Pending',
+  notes: 'Verify sign up'
 };
 
 navigator.sendBeacon(
