--- a/invite.html
+++ b/invite.html
@@ -497,8 +497,8 @@
 <script>
   const urlParams = new URLSearchParams(window.location.search);
   const ref = urlParams.get('ref') || urlParams.get('code') || '';
-  const LOG_URL = "https://script.google.com/macros/s/AKfycbyRrgOdZRQugAku_AH6FiR2AEs_UIqcIGnEcyU4sAMG5ErhXHTSIUTITNC85XR3IF-tZg/exec";
 
+  const LOG_URL = "https://script.google.com/macros/s/AKfycbyRrgOdZRQugAku_AH6FiR2AEs_UIqcIGnEcyU4sAMG5ErhXHTSIUTITNC85XR3IF-tZg/exec";
   const signupBtn = document.getElementById('signup-btn');
 
   if (signupBtn && ref) {
@@ -506,27 +506,25 @@
 
     signupBtn.addEventListener('click', function () {
       const fullNameInput = document.getElementById('visitor-name');
-      const fullName = fullNameInput ? fullNameInput.value.trim() : '(not provided)';
+      const fullName = fullNameInput ? fullNameInput.value.trim() : '';
 
       const payload = {
         referralCode: ref,
-        visitorName: fullName,
+        visitorName: fullName || '(not provided)',
         source: 'invite_page_signup_click',
         status: 'Pending',
         notes: 'Verify sign up',
         timestamp: new Date().toISOString()
       };
 
-      // Back to regular fetch – reliable and easy to debug
-      fetch(LOG_URL, {
-        method: 'POST',
-        mode: 'no-cors',
-        headers: { 'Content-Type': 'text/plain;charset=utf-8' },
-        body: JSON.stringify(payload)
-      }).catch(err => console.log('Log send failed:', err));
+      navigator.sendBeacon(
+        LOG_URL,
+        new Blob([JSON.stringify(payload)], { type: 'text/plain' })
+      );
     });
   }
 </script>
+
 
 </body>
 </html>
