--- a/invite.html
+++ b/invite.html
@@ -495,33 +495,56 @@
   </footer>
 
 <script>
+  // ────────────────────────────────────────────────
+  // URL params + logging
+  // ────────────────────────────────────────────────
   const urlParams = new URLSearchParams(window.location.search);
   const ref = urlParams.get('ref') || urlParams.get('code') || '';
 
-  const LOG_URL = "https://script.google.com/macros/s/AKfycbyRrgOdZRQugAku_AH6FiR2AEs_UIqcIGnEcyU4sAMG5ErhXHTSIUTITNC85XR3IF-tZg/exec";
+  // Your actual logging endpoint
+  const LOG_URL = "https://script.google.com/macros/s/AKfycbzsLDNNDGpeSbEDm91Z__XuAviXIlMTNYEXg6b8AcK3scmFba9QxP2kPFJLrz5ChOm8/exec";
+
   const signupBtn = document.getElementById('signup-btn');
 
   if (signupBtn && ref) {
+    // Pass ref to TaxDome
     signupBtn.href = `https://portal.taxentric.com/en-us/signup/?ref=${encodeURIComponent(ref)}`;
 
-    signupBtn.addEventListener('click', function () {
-      const fullNameInput = document.getElementById('visitor-name');
-      const fullName = fullNameInput ? fullNameInput.value.trim() : '';
+    signupBtn.addEventListener('click', function(e) {
+      // Do NOT preventDefault() — let the <a> href navigate normally
 
+      const fullNameInput = document.getElementById('visitor-name');
+      const fullName = fullNameInput ? fullNameInput.value.trim() : '(not provided)';
+
+      console.log("Button clicked");
+      console.log("Full name from input:", fullName);
+      console.log("Referral code:", ref);
+
+      // Prepare payload
       const payload = {
         referralCode: ref,
-        visitorName: fullName || '(not provided)',
+        visitorName: fullName,
         source: 'invite_page_signup_click',
-        status: 'Pending',
-        notes: 'Verify sign up',
+        notes: 'Clicked signup button',
         timestamp: new Date().toISOString()
       };
 
-      navigator.sendBeacon(
-        LOG_URL,
-        new Blob([JSON.stringify(payload)], { type: 'text/plain' })
-      );
+      console.log("Sending payload:", payload);
+
+      // Fire fetch (fire-and-forget)
+      fetch(LOG_URL, {
+        method: 'POST',
+        mode: 'no-cors',
+        headers: { 'Content-Type': 'text/plain;charset=utf-8' },
+        body: JSON.stringify(payload)
+      }).catch(err => {
+        console.log('Background fetch failed (normal during navigation):', err);
+      });
+
+      // Navigation happens automatically via <a> href
     });
+  } else {
+    console.log("Signup button or ref not found — no handler attached");
   }
 </script>
 
