--- a/invite.html
+++ b/invite.html
@@ -525,7 +525,8 @@
         referralCode: ref,
         visitorName: fullName,
         source: 'invite_page_signup_click',
-        notes: 'Clicked signup button',
+        status: 'Pending',
+		notes: 'Clicked signup button',
         timestamp: new Date().toISOString()
       };
 
