Enhance SEO with Open Graph and Twitter meta tags
Added Open Graph and Twitter meta tags for better sharing.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Taxentric Referral Hub</title>
   <link rel="stylesheet" href="styles.css">
+	<!-- Open Graph: Prioritize image, suppress text -->
+<meta property="og:title" content=" " />
+<meta property="og:description" content=" " />
+<meta property="og:image" content="https://referrals.taxentric.com/referralmessage.png" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+<meta property="og:image:alt" content="Sign up with Taxentric Solutions and get $25 off" />
+<meta property="og:image:type" content="image/png" />
+<meta property="og:url" content="https://referrals.taxentric.com/" />
+<meta property="og:type" content="website" />
+<meta property="og:locale" content="en_US" />
+
+<!-- Twitter/X: Large image, minimal text -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content=" " />
+<meta name="twitter:description" content=" " />
+<meta name="twitter:image" content="https://referrals.taxentric.com/referralmessage.png" />
   <script>
     (function() {
       const params = new URLSearchParams(window.location.search);
@@ -100,3 +117,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
