--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Taxentric Referral Hub</title>
   <link rel="stylesheet" href="styles.css">
 	<!-- Open Graph: Prioritize image, suppress text -->
-<meta property="og:title" content=" " />
-<meta property="og:description" content=" " />
+<meta property="og:title" content="Taxentric Solutions Referral" />
+<meta property="og:description" content="Get $25 off your tax return this season." />
 <meta property="og:image" content="https://referrals.taxentric.com/referralmessage.png" />
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="630" />
@@ -117,4 +117,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
