--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Taxentric Referral Hub</title>
+  <title>Taxentric $25 Referral</title>
   <link rel="stylesheet" href="styles.css">
 	<!-- Open Graph: Prioritize image, suppress text -->
 <meta property="og:title" content="Taxentric Solutions Referral" />
@@ -117,5 +117,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
