--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </form>
 
         <p id="success-message" class="hidden text-green-700 text-center mt-4">
-          🎉 You're signed up! Your referral code is below.
+          🎉 You’re signed up! Your referral links are below and in your email.
         </p>
 
         <div id="result" class="hidden mt-6 text-center">
@@ -117,6 +117,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
