--- a/invite.html
+++ b/invite.html
@@ -326,7 +326,7 @@
           <span class="price">$600</span>
         </div>
         <div class="price-item">
-          <strong>Form 1120 – C Corporation (includes 1 K-1)</strong>
+          <strong>Form 1120 – C Corporation</strong>
           <span class="price">$600</span>
         </div>
         <h3 style="margin-top: 32px;">Additional Fees</h3>
@@ -466,4 +466,5 @@
 </script>
 
 </body>
+
 </html>
